# blisswisdom-roll-call-assistant

./: .gitignore  README.md  desktop.spec  pyproject.toml
docs/: 舊-點名文件設置.md  舊-點名流程.md  點名文件設置.md  點名流程.md
