[tool.poetry]
name = "blisswisdom-roll-call-assistant"
version = "1.1.5"
description = ""
authors = ["Johann Chang <mr.changyuheng@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/changyuheng/blisswisdom-roll-call-assistant"
repository = "https://github.com/changyuheng/blisswisdom-roll-call-assistant"
packages = [
    { include = "blisswisdom_roll_call_assistant_desktop", from = "packages" },
    { include = "blisswisdom_roll_call_assistant_sdk", from = "packages" },
]


[tool.poetry.dependencies]
python = ">=3.7, <3.11"
dacite = "^1.8.0"
easyocr = [
    {version = "^1.6.2", platform = "linux"},
    {version = "^1.6.2", platform = "win32"},
]
pygsheets = "^2.0.6"
PySide6 = "^6.5.0"
selenium = "^4.8.3"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
webdriver-manager = "^3.8.5"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.9.0"

[tool.poetry.scripts]
blisswisdom-roll-call-assistant-desktop = 'blisswisdom_roll_call_assistant_desktop.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
